Revision history for Perl extension Business-Tax-Withholding-JP

{{$NEXT}}

0.05 2019-06-24T02:58:23Z
    - fixed the bug of net()

0.04 2019-04-03T02:50:56Z

    - added subtotal() method and tests

0.03 2019-04-02T23:11:10Z

    - added amount() method and tests

0.02 2019-04-01T12:40:33Z

    - Now you may ignore the withholings

0.01 2019-03-31T10:44:37Z

    - original version
