@@ -1,7 +1,7 @@
 {
    "abstract" : "auto calculation for Japanese tax and withholding",
    "author" : [
-      "worthmine <worthmine@cpan.org>"
+      "Yuki Yoshida<worthmine@gmail.com>"
    ],
    "dynamic_config" : 0,
    "generated_by" : "Minilla/v3.1.4, CPAN::Meta::Converter version 2.150010",
@@ -10,7 +10,7 @@
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : 2
+      "version" : "2"
    },
    "name" : "Business-Tax-Withholding-JP",
    "no_index" : {
@@ -65,8 +65,11 @@
          "web" : "https://github.com/worthmine/Business-Tax-Withholding-JP"
       }
    },
-   "version" : "0.05",
+   "version" : "0.06",
    "x_authority" : "cpan:WORTHMINE",
-   "x_serialization_backend" : "JSON::PP version 4.00",
+   "x_contributors" : [
+      "worthmine <worthmine@cpan.org>"
+   ],
+   "x_serialization_backend" : "JSON::PP version 2.27400_02",
    "x_static_install" : 1
 }
