@@ -1,6 +1,7 @@
 Revision history for Perl extension Business-Tax-Withholding-JP
 
 {{$NEXT}}
+    - upgrade for 10% consumption tax
 
 0.05 2019-06-24T02:58:23Z
     - fixed the bug of net()
